<resources>
    <string name="app_name">G7s21P5HGLE</string>
    <string name="titulo">Ingrese lo siguientes datos</string>
    <string name="edad">Edad</string>
    <string name="nombre">Nombre</string>
    <string name="e_mail">E-mail</string>
    <string name="numero_telefonico">Numero telefonico</string>
    <string name="curp">CURP</string>
    <string name="estado_de_residencia">Estado de residencia</string>
    <string name="aqui_apareceran_los_datos_en_json">Aqui apareceran los datos en Json</string>
    <string name="button">Convertir</string>
</resources>